@@ -324,6 +324,7 @@ The following is relatively complete list of the major changes (this may not be
         Added - Renderer.isShowSuppressedViolations()
       Renamed - Renderer.showSuppressedViolations(boolean) to Renderer.setShowSuppressedViolations(boolean)
       Renamed - PapariTextRenderer to TextColorRenderer
+      Renamed - OntheFlyRenderer to AbstractIncrementalRenderer
 
 PMD command line changes:
 
